--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -235,6 +235,8 @@ if(K2_WITH_CUDA)
     if(CUDA_VERSION VERSION_GREATER "12.0")
       list(APPEND K2_COMPUTE_ARCH_CANDIDATES 90)
     endif()
+  else()
+    list(FILTER K2_COMPUTE_ARCH_CANDIDATES INCLUDE REGEX "35|50|60|61|70|75|80|86|90")
   endif()
 
   if(CUDA_VERSION VERSION_GREATER "11.0")
