--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -237,6 +237,7 @@ if(K2_WITH_CUDA)
     endif()
   else()
     list(FILTER K2_COMPUTE_ARCH_CANDIDATES INCLUDE REGEX "35|50|60|61|70|75|80|86|90")
+    message(STATUS "Filtered K2_COMPUTE_ARCH_CANDIDATES ${K2_COMPUTE_ARCH_CANDIDATES}")
   endif()
 
   if(CUDA_VERSION VERSION_GREATER "11.0")
